# L2cap

./: .gitignore  L2cap.jad.profile  L2cap.java  MANIFEST  Makefile  hidd.patch
hidd/: .gitignore  Makefile  Makefile.am  autogen.sh  configure.in  fakehid.c  hidd.h  l2cap.h  main.c  sdp.c  textfile.c  textfile.h
